<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_premium"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_toolbar"
            android:visibility="visible" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_toolbar"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp">


                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_premium"
                            android:gravity="center"
                            android:scaleType="centerInside" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerVertical="true"
                            android:text="PREMIUM TODAY"
                            android:textColor="#fff"
                            android:textSize="17dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:text="Unlock Top Servers."
                                android:textColor="#fff"
                                android:textSize="16dp" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_centerVertical="true"
                                android:text="Remove Ads."
                                android:textColor="#fff"
                                android:textSize="16dp" />


                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>


            </FrameLayout>
        </LinearLayout>
<ImageView
    android:layout_marginRight="100dp"
    android:src="@drawable/premium_text"
    android:layout_width="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_height="150dp"></ImageView>



        <LinearLayout
            android:visibility="gone"
            android:id="@+id/linea_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_forbidden" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="No Ads"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:padding="5dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_wifi" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="3dp"
                        android:text="Fast Connection Speed"
                        android:textStyle="bold"
                        android:textColor="@color/white" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linea_ads"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/one_month_layout"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/one_month"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_1_month"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_feature"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/one_month_sub_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/one_month"
                        android:textColor="@color/primary"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/six_months_layout"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/three_month"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_6_month"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_feature"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/six_months_sub_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/six_month"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/twelve_months_layout"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/six_month"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <LinearLayout
                        android:visibility="gone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_6_month"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/all_feature"
                            android:textColor="@android:color/black" />
                    </LinearLayout>

                    <TextView
                        android:visibility="gone"
                        android:id="@+id/one_year_sub_cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/one_year"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />
                </LinearLayout>




                <TextView
                    android:layout_margin="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:textAlignment="center"
                    android:text="@string/premium_cancel"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>